[project]
name = "rated_exporter_sdk"
dynamic = ["version"]
description = "Fetch metrics and logs from various cloud providers and monitoring services"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    { name = "samtin0x", email = "spm@rated.network" }
]
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client==2.151.0",
    "google-auth-httplib2==0.2.0",
    "google-auth==2.35.0",
    "google==3.0.0",
    "oauth2client==4.1.3",
    "pydantic==2.8.2",
    "structlog==24.4.0",
    "urllib3==1.26.18",
]

[dependency-groups]
dev = [
    "bcrypt==4.2.0",
    "black==24.4.0",
    "docker>=6.1.2,<7.0.0",
    "mypy==1.9.0",
    "pre-commit>=3.5.0",
    "pytest-mock>=3.11.1",
    "pytest==8.1.1",
    "pyyaml~=6.0.2",
    "requests>=2.31.0,<2.32.0",
    "ruff==0.3.7",
    "types-requests>=2.25.4",
]

[build-system]
requires = [
    "hatchling",
    "versioningit",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.format]
distance = "{base_version}.post{distance}"
# Example formatted version: 1.2.3.post42

dirty = "{base_version}"
# Example formatted version: 1.2.3

distance-dirty = "{base_version}.post{distance}"
# Example formatted version: 1.2.3.post42

[tool.ruff]
src = ["src", "tests"]
line-length = 125

[tool.ruff.lint]
select = [
    "C90",
    "E",
    "F",
    "G",
    "I",
    "N",
    "PL",
    "RUF",
    "TD",
]
ignore = [
    "C901",
    "PLR0912",
    "PLR0913",
    "PLR0915",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]

[tool.ruff.lint.pylint]
max-branches = 20

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
no_implicit_optional = true
